<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UOA</string>
    <string name="app_name2">YouOnAlert</string>
    <string name="actMain_bt1">Activate</string>
    <string name="actMain_bt2">Deactivate</string>
    <string name="actMain_bt3">Add Notification</string>
    <string name="actMain_bt4">Remove Notification</string>
    <string name="actMain_tx2">Search LatLng (Wait)</string>
    <string name="actMain_tx3">Km/h</string>
    <string name="actMain_img1">Radar</string>
    <string name="act_Main_no_latlng">Unable to set latitude and longitude. Try an open area.</string>
    <string name="act_Main_gps">Enable GPS</string>
    <string name="act_Main_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="act_Main_dialogTitleNoGps">GPS not enabled</string>
    <string name="act_Main_dialogTitleNoLatLng">No Coordinated</string>
    <string name="menu_settings">Settings</string>
    <string name="actNot_tx2">Title</string>
    <string name="actNot_tx3">Description</string>
    <string name="actNot_tx4">Category</string>
    <string name="actNot_ed1">Add a title</string>
    <string name="actNot_ed2">Add a description</string>
    <string name="actNot_bt1">Cancel</string>
    <string name="actNot_bt2">Save</string>
    <string name="actNot_bt3">Adjust On The Map</string>
    <string name="actNot_Back">Voltar</string>
    <string name="actRemNot_dialogTitle">Remove Notification</string>
    <string name="actRemNot_dialogMsg">Are you sure you want to delete this Notification?</string>
    <string name="actRemNot_cabec_list">Notifications List</string>
    <string name="menu_show_map">Save Precise Location</string>
    <string name="menu_show_nots_on_map1">Stop Map Refresh</string>
    <string name="menu_show_nots_on_map2">Continue Map Refresh</string>
    <string name="show_map_dialog_no_map_title">Map not enabled</string>
    <string name="show_map_dialog_no_map_msg">The Map only works with Internet access</string>
    <string name="actShowMap_YouAreHere">You are Here</string>

    <color name="actMain_tx2_red">#FF0000</color>
    <color name="actMain_tx3_green">#00FF00</color>
    <color name="actMain_bg_black">#000000</color>
    <color name="actMain_tx1_white">#FFFFFF</color>
    <color name="actMain_cabec_silver1">#C0C0C0</color>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_notification">Add Notification</string>
    <string name="title_activity_remove_notification">Remove Notification</string>
    <string name="title_activity_show_map">Notification Adjustment</string>
    <string name="title_activity_show_nots_on_map">Notifications</string>
    
    <string-array name="categories_array">
        <item>Select an option</item>
        <item>Hole in the road</item>
        <item>Dangerous crossing</item>
        <item>Area with burglaries</item>
        <item>Motorcycle traffic</item>
        <item>Materials scattered</item>
    </string-array>

</resources>